<resources>
    <string name="app_name">Media Collection</string>
    <string name="title_main_activity">Media Collection</string>
    <string name="title_settings_activity">Settings</string>
    <string name="title_item_activity">Item</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_back">Back</string>
    <string name="main_menu_search">Search</string>
    <string name="main_menu_filter">Filter</string>
    <string name="main_menu_sort">Sort</string>
    <string name="main_menu_synchronize">Synchronize</string>
    <string name="main_menu_export">Export</string>
    <string name="main_menu_import">Import</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_statistic">Statistic</string>
    <string name="main_menu_no_poster">Items with no poster</string>
    <string name="main_menu_random">Pick Random</string>
    <string name="main_menu_last_seen">Last seen</string>
    <string name="main_menu_search_hint">Search…</string>
    <string name="main_menu_search_content_description">Search for items</string>
    <string name="main_menu_search_back_content_description">Close search</string>
    <string name="main_floating_button_content_description">Add item</string>
    <string name="main_progressbar_text">0 %</string>
    <string name="main_sort">Direction…</string>
    <string name="main_sort_ascending">Ascending</string>
    <string name="main_sort_descending">Descending</string>
    <string name="main_no_db">SQLite database is not available.</string>
    <string name="main_no_filter_columns">Filter columns are not initialized.</string>
    <string name="main_no_sort_columns">Sort columns are not initialized.</string>
    <string name="main_field_title">Title</string>
    <string name="main_field_originaltitle">Original title</string>
    <string name="main_field_publicationyear">Publication year</string>
    <string name="main_field_type">Type</string>
    <string name="main_field_subtype">Medium</string>
    <string name="main_field_filedunder">Filed under</string>
    <string name="main_field_lastseen">Last seen</string>
    <string name="main_field_lengthinminutes">Length in minutes</string>
    <string name="main_field_languages">Languages</string>
    <string name="main_field_subtitles">Subtitles</string>
    <string name="main_field_directors">Directors</string>
    <string name="main_field_screenwriters">Screenwriters</string>
    <string name="main_field_cast">Cast</string>
    <string name="main_field_specialfeatures">Special Features</string>
    <string name="main_field_other">Other</string>
    <string name="main_filter_overview">Filter overview</string>
    <string name="main_filter_value_field">Value…</string>
    <string name="main_filter_add_button">Add</string>
    <string name="main_filter_delete_button">Delete</string>
    <string name="main_filter_column_name">Filter column</string>
    <string name="main_filter_value">Filter value</string>
    <string name="main_sort_overview">Sort overview</string>
    <string name="main_sort_add_button">Add</string>
    <string name="main_sort_delete_button">Delete</string>
    <string name="main_sort_column_name">Sort column</string>
    <string name="main_sort_direction">Direction</string>
    <string name="main_item_poster_content_description">Media Poster</string>
    <string name="main_item_title_content_description">Media Title</string>
    <string name="main_return_record_inserted">Record inserted.</string>
    <string name="main_return_record_updated">Record updated.</string>
    <string name="main_return_record_deleted">Record deleted.</string>
    <string name="main_exception_open_output_stream">Failed to open output stream.</string>
    <string name="main_exception_contentresolver_insert">Failed to resolve or create file.</string>
    <string name="main_choose_filter">Please choose a column and a filter value.</string>
    <string name="main_filter_chosen">Filter \'%1$s\' for column \'%2$s\' added.</string>
    <string name="main_filter_removed">Filter \'%1$s\' removed.</string>
    <string name="main_choose_sort">Please choose a column and a sort direction.</string>
    <string name="main_sort_chosen">Sort for column \'%1$s\' with direction \'%2$s\' added.</string>
    <string name="main_sort_removed">Sort for column \'%1$s\' removed.</string>
    <string name="main_confirm_action">Confirm Action</string>
    <string name="main_reset_filter_sort_question">Do you want to reset filters and sort criteria?</string>
    <string name="main_no_records_found">No records found.</string>
    <string name="main_data_exported">Data exported to \'%1$s\'.</string>
    <string name="main_find_json_failure">Cannot find a .json.txt file.</string>
    <string name="main_find_dat_failure">Cannot find a .dat.txt file.</string>
    <string name="main_select_json_and_dat">Please select both a .json.txt and a .dat.txt file.</string>
    <string name="main_import_question">"Are you sure you want to reset all data in database and import the file backup?"</string>
    <string name="main_import_not_truncate_mediacollection">Could not truncate table \'mediacollection\'.</string>
    <string name="main_import_not_truncate_languages">Could not truncate table \'language\'.</string>
    <string name="main_import_status">Importing data from files.</string>
    <string name="main_import_finished">Database import finished.</string>
    <string name="main_sync_auth_passphrase_missing">Synchronisation authentication passphrase is missing.</string>
    <string name="main_sync_exception_post_all">Posting all data could not be finished. Synchronisation aborted. %1$d | %2$s</string>
    <string name="main_sync_exception_update_deleted">Setting deleted timestamp failed for \'%1$s\'.</string>
    <string name="main_sync_exception_fetch_all">Fetching all data could not be finished. Synchronisation aborted. %1$d | %2$s</string>
    <string name="main_sync_sending_record_overview">Sending record overview</string>
    <string name="main_sync_sent_record_overview">Record overview sent</string>
    <string name="main_sync_sending_records">Sending records</string>
    <string name="main_sync_receiving_record_overview">Receiving record overview</string>
    <string name="main_sync_received_record_overview">Record overview received</string>
    <string name="main_sync_decoding_record_overview">Decoding record overview</string>
    <string name="main_sync_decoded_record_overview">Decoded record overview</string>
    <string name="main_sync_verify_received_records">Verify received records</string>
    <string name="main_sync_request_records">Request records</string>
    <string name="main_sync_finished">Synchronisation finished.</string>
    <string name="main_foreground_service_title">Media Collection Foreground Service</string>
    <string name="main_foreground_service_progress_title_synchronise">Synchronise…</string>
    <string name="main_foreground_service_progress_title_import">Import…</string>
    <string name="main_foreground_service_starting">Starting…</string>
    <string name="main_notification_not_enabled_title">Notifications Permission</string>
    <string name="main_notification_not_enabled_message">Permission for notifications for current app are not enabled completely.\nPlease enable permissions for notifications under Settings -> Apps -> Media Collection -> App-Permissions.</string>
    <string name="main_app_unknown_version">Cannot get current app version.</string>
    <string name="itemview_menu_autofill">Autofill</string>
    <string name="itemview_menu_delete">Delete</string>
    <string name="itemview_menu_save">Save</string>
    <string name="itemview_record_not_loaded">Record could not be loaded.</string>
    <string name="itemview_tab_title_general">General</string>
    <string name="itemview_tab_title_details">Details</string>
    <string name="itemview_movie">Movie</string>
    <string name="itemview_series">Series</string>
    <string name="itemview_general_title">Title…</string>
    <string name="itemview_general_type">Type…</string>
    <string name="itemview_general_publication_year">Publication year…</string>
    <string name="itemview_general_original_title">Original title…</string>
    <string name="itemview_general_medium">Medium…</string>
    <string name="itemview_general_medium_bluray">Bluray</string>
    <string name="itemview_general_medium_dvd">DVD</string>
    <string name="itemview_general_medium_4k">4K</string>
    <string name="itemview_general_filed_under">Filed under…</string>
    <string name="itemview_poster_edit">Edit</string>
    <string name="itemview_description_poster">Poster</string>
    <string name="itemview_description_edit_poster">Edit poster</string>
    <string name="itemview_bsd_name">Name</string>
    <string name="itemview_bsd_details">Original Title - Release Date</string>
    <string name="itemview_bsd_image">Poster preview</string>
    <string name="settings_menu_overwrite_truststore">Overwrite truststore(s)</string>
    <string name="settings_menu_delete_truststore">Delete truststore(s)</string>
    <string name="settings_menu_reset">Database Reset</string>
    <string name="settings_menu_factory_reset">Factory Reset</string>
    <string name="settings_category_general">General</string>
    <string name="settings_general_locale">Language</string>
    <string name="settings_general_show_media_title">Enable media title</string>
    <string name="settings_general_backup_folder">Backup folder</string>
    <string name="settings_general_swipe_refresh_dialog">Swipe refresh dialog</string>
    <string name="settings_general_toolbar_offset">Toolbar Offset</string>
    <string name="settings_general_toolbar_offset_summary">Choose a value between 0 and 100</string>
    <string name="settings_general_toolbar_wait_autosearch">Toolbar Wait Autosearch(ms)</string>
    <string name="settings_general_toolbar_wait_autosearch_summary">Choose a value between 0 and 5000</string>
    <string name="settings_category_poster">Poster</string>
    <string name="settings_poster_desired_width">Desired poster width</string>
    <string name="settings_poster_overview_fixed_height">Overview fixed poster height (px)</string>
    <string name="settings_poster_tmdb_url">TMDB poster URL</string>
    <string name="settings_poster_movieposterdb_url">Movie poster db URL</string>
    <string name="settings_category_search">Search</string>
    <string name="settings_search_tmdb_url_movies">TMDB URL movie results</string>
    <string name="settings_search_tmdb_url_movie_details">TMDB URL movie details</string>
    <string name="settings_search_tmdb_url_series">TMDB URL series results</string>
    <string name="settings_search_tmdb_url_series_details">TMDB URL series details</string>
    <string name="settings_search_tmdb_target_language">TMDB Search target language</string>
    <string name="settings_search_tmdb_api_key">TMDB API Key</string>
    <string name="settings_category_sync">Synchronisation</string>
    <string name="settings_sync_automatic">Automatic Synchronization</string>
    <string name="settings_sync_server_host">Server Host/IP</string>
    <string name="settings_sync_server_port">Server Port</string>
    <string name="settings_sync_receive_buffer_size">Receive Buffer Size</string>
    <string name="settings_sync_common_passphrase">Common passphrase</string>
    <string name="settings_sync_auth_user">Authentication user</string>
    <string name="settings_sync_auth_passphrase">Authentication passphrase</string>
    <string name="settings_sync_truststore_filename">Truststore filename</string>
    <string name="settings_sync_truststore_password">Truststore password</string>
    <string name="settings_sync_receive_max_unknown_amount_in_mib">Receive max. unknown amount(MiB)</string>
</resources>