<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iV_Poster"
            android:layout_width="267dp"
            android:layout_height="400dp"
            android:contentDescription="@string/itemview_description_poster"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_launcher_background" />

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/itemview_description_edit_poster"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/itemview_poster_edit"
            android:drawableLeft="@android:drawable/ic_menu_edit"
            android:layout_gravity="center"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>