<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <ImageButton
        android:id="@+id/filterItemDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/main_filter_delete_button"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@android:drawable/ic_delete"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/filterItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_filter_column_name"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/filterItemDeleteButton"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/filterItemValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_filter_value"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/filterItemName"
        app:layout_constraintStart_toStartOf="@id/filterItemName"
        app:layout_constraintEnd_toEndOf="@id/filterItemName"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>