<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/main_filter_overview"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <Spinner
            android:id="@+id/spinnerFilterColumns"
            android:layout_width="120dp"
            android:layout_height="32dp"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/filterValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:hint="@string/main_filter_value_field"
            android:importantForAutofill="no"
            android:inputType="text" />

        <ImageButton
            android:id="@+id/addFilterItemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/main_filter_add_button"
            android:src="@android:drawable/ic_input_add" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFilterItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>